# moto_ml

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  metrics.rs  state.rs
src-tauri/src/data/: features.rs  loader.rs  mod.rs
src-tauri/src/models/: any_model.rs  linear.rs  mlp.rs  mod.rs  rbf.rs  regression.rs  svm.rs  traits.rs
src-tauri/tests/: test_cases.rs
