[package]
name = "moto-ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "moto_ml_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
rand = "0.8"
image = "0.24"
walkdir = "2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[profile.release]
opt-level = 3
lto = true
